--- a/CSS/instagram.css
+++ b/CSS/instagram.css
@@ -7,6 +7,10 @@
 
 :root {
   --primary: #F6F7EB;
+  --secondary: #999999;
+  --terciary: #45B8ED;
+  --details: #484B70;
+  --extra: #1D465D;
 }
 
 main > div > span {
@@ -22,12 +26,105 @@ main > div > span, #form-container {
   width: 50%;
 }
 
-#form-container {
-  text-align: center;
-}
-
 main > div:nth-child(1) {
   display: flex;
   flex-direction: row;
   margin-top: 30px;
+}
+
+#facebook-login {
+  margin-bottom: 25px;
+}
+
+#facebook-login a {
+  text-decoration: none;
+  color: var(--details);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#facebook-login img {
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
+
+#facebook-login span {
+  font-weight: bold;
+  font-size: 13px;
+  margin-top: 1px;
+}
+
+#forgot-pass {
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+#forgot-pass a {
+  text-decoration: none;
+  color: var(--extra);
+}
+
+#form-box {
+  background-color: var(--primary);
+  border: 1px solid var(--secondary);
+  width: 350px;
+  margin-top: 30px;
+}
+
+#form-box #logo-insta {
+  width: 175px;
+  height: 51px;
+  margin: 30px auto 12px;
+  background: var(--primary);
+}
+
+#form-container {
+  text-align: center;
+}
+
+#login-form input {
+  display: block;
+  font-size: 12px;
+  padding: 12px 9px;
+  background-color: var(--primary);
+  border: 1px solid var(--secondary);
+  border-radius: 3px;
+  width: 268px;
+  margin: 5px auto;
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--terciary);
+  color: var(--primary);
+  margin-top: 15px;
+  border-radius: 5px;
+  height: 30px;
+  border-color: var(--terciary);
+  font-size: 13px;
+  padding: 0;
+  font-weight: bold;
+}
+
+.separator {
+  position: relative;
+}
+
+.separator .line {
+  border-top: 1px solid var(--secondary);
+  width: 268px;
+  margin: 25px auto 35px;
+}
+
+.separator .line span {
+  position: absolute;
+  color: var(--secondary);
+  width: 50px;
+  top: -6px;
+  left: 50%;
+  margin-left: -25px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: var(--primary);
 }
