--- a/CSS/instagram.css
+++ b/CSS/instagram.css
@@ -13,6 +13,21 @@
   --extra: #1D465D;
 }
 
+footer {
+  text-align: left;
+  width: 1000px;
+  margin: 50px auto;
+}
+
+footer #footer-link {
+  list-style: none;
+}
+
+footer #footer-link li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
 main > div > span {
   text-align: right;
 }
@@ -30,6 +45,12 @@ main > div:nth-child(1) {
   display: flex;
   flex-direction: row;
   margin-top: 30px;
+}
+
+#copyright {
+  font-size: 12px;
+  color: var(--secondary);
+  margin-top: 10px;
 }
 
 #facebook-login {
@@ -56,6 +77,12 @@ main > div:nth-child(1) {
   margin-top: 1px;
 }
 
+#footer-link a {
+  text-decoration: none;
+  color: var(--secondary);
+  font-size: 12px;
+}
+
 #forgot-pass {
   margin-bottom: 20px;
   font-size: 12px;
@@ -66,22 +93,11 @@ main > div:nth-child(1) {
   color: var(--extra);
 }
 
-#form-box {
+#form-box, #register-container {
   background-color: var(--primary);
   border: 1px solid var(--secondary);
   width: 350px;
   margin-top: 30px;
-}
-
-#form-box > img {
-  width: 175px;
-  height: 51px;
-  margin: 30px auto 12px;
-  background: var(--primary);
-}
-
-#form-container {
-  text-align: center;
 }
 
 #form-box > form input {
@@ -109,6 +125,52 @@ main > div:nth-child(1) {
   font-size: 13px;
   padding: 0;
   font-weight: bold;
+}
+
+#form-box > img {
+  width: 175px;
+  height: 51px;
+  margin: 30px auto 12px;
+  background: var(--primary);
+}
+
+#form-container {
+  text-align: center;
+}
+
+#get-app-container {
+  text-align: center;
+  width: 350px;
+}
+
+#get-app-container a {
+  text-decoration: none;
+}
+
+#get-app-container img {
+  width: 136px;
+  height: 40px;
+}
+
+#get-app-container p {
+  margin: 20px 0;
+  font-size: 13px;
+}
+
+#register-container {
+  margin-top: 10px;
+  padding: 25px;
+}
+
+#register-container a {
+  color: var(--terciary);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#register-container p {
+  font-size: 14px;
+  color: var(--details);
 }
 
 .separator {
